@@ -2,14 +2,17 @@ package org.example;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import java.io.*;
-import java.nio.file.*;
-import java.nio.file.attribute.PosixFilePermission;
-import java.text.SimpleDateFormat;
-import java.util.*;
-import java.util.regex.*;
-import java.util.stream.Collectors;
-import static java.awt.Color.*;
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
+import java.util.regex.Pattern;
+
 
 /**
  * HomePathUpdater
@@ -20,12 +23,16 @@ public class HomePathUpdater {
     // Color constants for console output
     private static final Logger logger = LoggerFactory.getLogger(HomePathUpdater.class);
     private static final String RESET = "\u001B[0m";
-    private static final String CYAN = "\u001B[36m";
-    private static final String CHECK_MARK = "✓";
-    
-    private static final String ZSHRC_PATH = String.format("%s/.zshrc", System.getProperty("user.home"));
+    private static final String RED = "\u001B[31m";
+    private static final String YELLOW = "\u001B[33m";
+
+    private static final String ZSHRC_PATH = "%s/.zshrc".formatted(System.getProperty("user.home"));
     private static final Path ZSHRC = Paths.get(ZSHRC_PATH);
-    private static final String BACKUP_DIR = String.format("%s/.zsh_backups", System.getProperty("user.home"));
+
+    static {
+        System.getProperty("user.home");
+    }
+
     private static final List<String> SUMMARY = new ArrayList<>();
     private static final List<String> SUGGESTIONS = new ArrayList<>();
     
@@ -33,7 +40,7 @@ public class HomePathUpdater {
     private static final Pattern EXPORT_PATH_PATTERN = Pattern.compile("^export PATH=.*");
     private static final Pattern SOURCE_PATTERN = Pattern.compile("^source\\s+.*");
     
-    public static void main(String[] args) {
+    static void main() {
         try {
             print("🚀 Starting Home Path Configuration Update");
             print("=".repeat(50));
@@ -60,14 +67,20 @@ public class HomePathUpdater {
         }
     }
     
-    private static void ensureZshrcExists() throws IOException {
+    private static void ensureZshrcExists() {
         File zshrc = new File(ZSHRC_PATH);
         if (!zshrc.exists()) {
             print("⚠️  .zshrc file not found. Creating a new one...");
-            if (zshrc.createNewFile()) {
-                SUMMARY.add("✅ Created new .zshrc file");
-            } else {
-                throw new IOException("Failed to create .zshrc file");
+            try {
+                if (zshrc.createNewFile()) {
+                    SUMMARY.add("✅ Created new .zshrc file");
+                } else {
+                    error("❌ Failed to create .zshrc file");
+                    System.exit(1);
+                }
+            } catch (IOException e) {
+                error("❌ Error creating .zshrc file: %s".formatted(e.getMessage()));
+                System.exit(1);
             }
         }
     }
@@ -86,7 +99,7 @@ public class HomePathUpdater {
             
         // Add or update PATH export if needed
         String homePath = System.getProperty("user.home");
-        String pathExport = String.format("export PATH=\"%s/.local/bin:$PATH\"", homePath);
+        String pathExport = "export PATH=\"%s/.local/bin:$PATH\"".formatted(homePath);
         
         if (!hasPathExport) {
             print("➕ Adding PATH export to .zshrc");
@@ -155,7 +168,7 @@ public class HomePathUpdater {
             
         if (pathLine.isPresent()) {
             String pathValue = pathLine.get();
-            print(String.format("ℹ️  Found PATH export: %s", pathValue));
+            print("ℹ️  Found PATH export: %s".formatted(pathValue));
             
             // Check for different possible path formats
             boolean containsLocalBin = pathValue.contains("$HOME/.local/bin") || 
@@ -213,7 +226,7 @@ public class HomePathUpdater {
         print("   Expected to find a line like one of these:");
         print("   export PATH=\"$HOME/.local/bin:$PATH\"");
         print("   export PATH=~/.local/bin:$PATH");
-        print(String.format("   export PATH=%s/.local/bin:$PATH", System.getProperty("user.home")));
+        print("   export PATH=\"%s/.local/bin:$PATH\"".formatted(System.getProperty("user.home")));
         print("\n   You can manually verify by running:");
         print("   cat ~/.zshrc | grep PATH=");
         print("   or");
@@ -221,115 +234,18 @@ public class HomePathUpdater {
     }
     
     // File backup methods
-    private static void createBackupDirectory() throws IOException {
-        File backupDir = new File(BACKUP_DIR);
-        if (!backupDir.exists()) {
-            if (backupDir.mkdirs()) {
-                info(String.format("Created backup directory: %s", BACKUP_DIR));
-            } else {
-                warning(String.format("Failed to create backup directory: %s", BACKUP_DIR));
-            }
-        }
-    }
-    
-    private static final int MAX_BACKUPS = 10;  // Maximum number of backups to keep
-    
-    /**
-     * Creates a backup of the .zshrc file with timestamp and manages backup rotation.
-     * @throws IOException if backup creation fails
-     */
-    private static void createBackup() throws IOException {
-        File original = new File(ZSHRC_PATH);
-        if (!original.exists()) {
-            info("No existing .zshrc file found. No backup needed.");
-            return;
-        }
-        
-        // Ensure backup directory exists
-        createBackupDirectory();
-        
-        // Create timestamped backup
-        String timestamp = new SimpleDateFormat("yyyyMMdd_HHmmss").format(new Date());
-        String backupPath = String.format("%s/zshrc_backup_%s", BACKUP_DIR, timestamp);
-        
-        try {
-            // Create the backup
-            Files.copy(original.toPath(), Paths.get(backupPath), StandardCopyOption.REPLACE_EXISTING);
-            info(String.format("Created backup at: %s", backupPath));
-            
-            // Clean up old backups if necessary
-            cleanUpOldBackups();
-            
-        } catch (IOException e) {
-            String errorMsg = String.format("Failed to create backup: %s", e.getMessage());
-            error(errorMsg);
-            throw new IOException(errorMsg, e);
-        }
-    }
-    
-    /**
-     * Cleans up old backups, keeping only the most recent MAX_BACKUPS files.
-     */
-    private static void cleanUpOldBackups() {
-        try {
-            File backupDir = new File(BACKUP_DIR);
-            File[] backupFiles = backupDir.listFiles((dir, name) -> name.startsWith("zshrc_backup_"));
-            
-            if (backupFiles == null || backupFiles.length <= MAX_BACKUPS) {
-                return; // No cleanup needed
-            }
-            
-            // Sort by last modified time (oldest first)
-            Arrays.sort(backupFiles, Comparator.comparingLong(File::lastModified));
-            
-            // Delete oldest backups
-            for (int i = 0; i < backupFiles.length - MAX_BACKUPS; i++) {
-                if (backupFiles[i].delete()) {
-                    info(String.format("Cleaned up old backup: %s", backupFiles[i].getName()));
-                } else {
-                    warning(String.format("Failed to clean up old backup: %s", backupFiles[i].getName()));
-                }
-            }
-        } catch (Exception e) {
-            warning("Failed to clean up old backups: %s".formatted(e.getMessage()));
-        }
-    }
     
     // Output formatting methods
     private static void print(String message) {
         System.out.println(message);
     }
     
-    private static void printHeader(String message) {
-        print(String.format("%n%s%s%s", BLUE, "=".repeat(80), RESET));
-        print(String.format("%s%s%s", BLUE, message, RESET));
-        print(BLUE + "=".repeat(80) + RESET);
-    }
-    
-    private static void printSection(String message) {
-        print(String.format("%n%s%s%s", CYAN, message, RESET));
-        print(String.format("%s%s", CYAN, "-".repeat(Math.min(80, message.length())) + RESET));
-    }
-    
-    private static void success(String message) {
-        SUMMARY.add(String.format("%s%s %s%s", GREEN, CHECK_MARK, message, RESET));
-        print(String.format("%s[SUCCESS] %s%s", GREEN, message, RESET));
-    }
-    
-    private static void info(String message) {
-        print(String.format("%s[INFO] %s%s", BLUE, message, RESET));
-    }
-    
-    private static void warning(String message) {
-        print(String.format("%s[WARNING] %s%s", YELLOW, message, RESET));
-    }
-    
     private static void error(String message) {
-        print(String.format("%s[ERROR] %s%s", RED, message, RESET));
+        print("%s[ERROR] %s%s".formatted(RED, message, RESET));
     }
     
     private static void suggestion(String suggestion) {
         SUGGESTIONS.add(suggestion);
-        print(String.format("%s  → %s%s", YELLOW, suggestion, RESET));
+        print("%s  → %s%s".formatted(YELLOW, suggestion, RESET));
     }
 }
